--- a/Lesson-3/index.html
+++ b/Lesson-3/index.html
@@ -46,7 +46,7 @@
 <div id="big">
     <div id="medium">
         <div id="small">
-            <!--            <div id="img"></div>-->
+                        <div id="img"></div>
             <!--            <button id="1">1</button>-->
             <!--            <button id="2">2</button>-->
             <!--            <button id="3">3</button>-->
@@ -55,7 +55,7 @@
         </div>
     </div>
 </div>
-<!--<a href="https://learn.javascript.ru/document" id="a">LearnJS.ru</a>-->
+<a href="https://learn.javascript.ru/document" id="a">LearnJS.ru</a>
 
 <script src="main.js"></script>
 </body>
